--- a/StorageAPI/Properties/launchSettings.json
+++ b/StorageAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/warehouse",
+      "launchUrl": "api/account",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "StorageAPI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/warehouse",
+      "launchUrl": "api/account",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
