--- a/StorageAPI/appsettings.json
+++ b/StorageAPI/appsettings.json
@@ -4,5 +4,14 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalConnection": "Server=(localdb)\\mssqllocaldb;Database=WarehouseStorage;Trusted_Connection=True;",
+    "AzureConnection": "Server=tcp:warehouse-manager-dbserver.database.windows.net,1433;Initial Catalog=warehouse-manager-api_db;Persist Security Info=False;User ID=viktor@warehouse-manager-dbserver;Password=bRAVO1996;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "ApplicationSettings": {
+    "JWT_KEY": "vfvrbylhzybr18021",
+    "APP_URL": "http://localhost:4200",
+    "APP_URL_AZURE": "https://warehouse-manager.azurewebsites.net"
+  }
 }
