--- a/StorageAPI/appsettings.Development.json
+++ b/StorageAPI/appsettings.Development.json
@@ -5,5 +5,15 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "LocalConnection": "Server=(localdb)\\mssqllocaldb;Database=WarehouseStorage;Trusted_Connection=True;",
+    "AzureConnection": "Server=tcp:warehouse-manager-dbserver.database.windows.net,1433;Initial Catalog=warehouse-db;Persist Security Info=False;User ID=viktor@warehouse-manager-dbserver;Password=bRAVO1996;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "ApplicationSettings": {
+    "JWT_KEY": "vfvrbylhzybr18021",
+    "APP_URL": "http://localhost:4200",
+    "APP_URL_AZURE": "https://warehouse-manager.azurewebsites.net",
+    "APP_URL_AZURE_NOT_SECURED": "http://warehouse-manager.azurewebsites.net"
   }
 }
